--- a/02_eda/05_data_pruning_&_summary_statistics.ipynb
+++ b/02_eda/05_data_pruning_&_summary_statistics.ipynb
@@ -2103,7 +2103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#unique.to_csv(\"../data/cleaned/unique_edgelist.csv\", encoding = 'utf-8', index = False)"
+    "unique.to_csv(\"../data/cleaned/unique_edgelist.csv\", encoding = 'utf-8', index = False)"
    ]
   },
   {
@@ -2113,19 +2113,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# total.to_csv(\"../data/cleaned/total_edgelist.csv\", encoding = 'utf-8', index = False)\n",
-    "# unique.to_csv(\"../data/cleaned/unique_edgelist.csv\", encoding = 'utf-8', index = False)\n",
-    "# hyst_total.to_csv(\"../data/cleaned/edgelist_total_hyst.csv\", encoding = 'utf-8', index = False)\n",
-    "# hyst_unique.to_csv(\"../data/cleaned/edgelist_unique_hyst.csv\", encoding = 'utf-8', index = False)\n",
-    "# hyst_repro.to_csv(\"../data/cleaned/edgelist_repro_hyst.csv\", encoding = 'utf-8', index = False)\n",
-    "# repro.to_csv(\"../data/cleaned/reproducible_edgelist.csv\", encoding = 'utf-8', index = False)\n",
-    "# distance.to_csv(\"../data/cleaned/distance_edgelist.csv\", encoding = 'utf-8', index = False)\n",
-    "# comcol.to_csv(\"../data/cleaned/comcol_edgelist.csv\", encoding = 'utf-8', index = False)\n",
-    "# colonizer.to_csv(\"../data/cleaned/colonizer_edgelist.csv\", encoding = 'utf-8', index = False)\n",
-    "# language.to_csv(\"../data/cleaned/language_edgelist.csv\", encoding = 'utf-8', index = False)\n",
-    "# contiguity.to_csv(\"../data/cleaned/contiguity_edgelist.csv\", encoding = 'utf-8', index = False)\n",
-    "# rta.to_csv(\"../data/cleaned/rta_edgelist.csv\", encoding = 'utf-8', index = False)\n",
-    "# panel.to_csv(\"../data/cleaned/panel_complete.csv\", encoding = 'utf-8', index = False)"
+    "total.to_csv(\"../data/cleaned/total_edgelist.csv\", encoding = 'utf-8', index = False)\n",
+    "unique.to_csv(\"../data/cleaned/unique_edgelist.csv\", encoding = 'utf-8', index = False)\n",
+    "hyst_total.to_csv(\"../data/cleaned/edgelist_total_hyst.csv\", encoding = 'utf-8', index = False)\n",
+    "hyst_unique.to_csv(\"../data/cleaned/edgelist_unique_hyst.csv\", encoding = 'utf-8', index = False)\n",
+    "hyst_repro.to_csv(\"../data/cleaned/edgelist_repro_hyst.csv\", encoding = 'utf-8', index = False)\n",
+    "repro.to_csv(\"../data/cleaned/reproducible_edgelist.csv\", encoding = 'utf-8', index = False)\n",
+    "distance.to_csv(\"../data/cleaned/distance_edgelist.csv\", encoding = 'utf-8', index = False)\n",
+    "comcol.to_csv(\"../data/cleaned/comcol_edgelist.csv\", encoding = 'utf-8', index = False)\n",
+    "colonizer.to_csv(\"../data/cleaned/colonizer_edgelist.csv\", encoding = 'utf-8', index = False)\n",
+    "language.to_csv(\"../data/cleaned/language_edgelist.csv\", encoding = 'utf-8', index = False)\n",
+    "contiguity.to_csv(\"../data/cleaned/contiguity_edgelist.csv\", encoding = 'utf-8', index = False)\n",
+    "rta.to_csv(\"../data/cleaned/rta_edgelist.csv\", encoding = 'utf-8', index = False)\n",
+    "panel.to_csv(\"../data/cleaned/panel_complete.csv\", encoding = 'utf-8', index = False)"
    ]
   },
   {
