--- a/02_eda/04_line_plots.ipynb
+++ b/02_eda/04_line_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "626c1621-ecf7-4e24-a55c-74bf6d4205e6",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "e74cc276-2bad-4487-a56f-5dde64268daf",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "1c3d70b3-1953-4d0a-8a34-5354553656a2",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "[2 rows x 51 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "a08d77ce-3cdb-49ee-ae32-68e52bcfabff",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "f3dfcc64-b228-4748-a571-461cc7643a19",
    "metadata": {
     "scrolled": true
@@ -414,7 +414,7 @@
        "23         2023  1.851371e+07        34747.656230              2.878763e+06"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "c107e7d3-0c09-4248-b54a-8d3069fd96bc",
    "metadata": {},
    "outputs": [],
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "23936f7a-8dc1-4683-9934-7d7a49896a87",
    "metadata": {},
    "outputs": [],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "54ff4ddf-f17e-48b4-8184-f73a014ae69f",
    "metadata": {},
    "outputs": [],
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "e64e5954-1c39-4441-9018-47aeb69f6bce",
    "metadata": {},
    "outputs": [],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "0358f68c-c8a7-466e-b176-84f0a768498d",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "      dtype='object', length=307)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "1f4670d1-cacc-4bc2-a521-d25bd96ab2f7",
    "metadata": {},
    "outputs": [
@@ -668,7 +668,7 @@
        "[3 rows x 307 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "2b7a98d0-73f4-4e8d-a2e8-b14b2e007a77",
    "metadata": {},
    "outputs": [],
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "28234676-8c34-41d2-abc0-cd938c368f32",
    "metadata": {},
    "outputs": [],
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "9fd94224-3b48-4fba-bb5e-9024bb7efc2e",
    "metadata": {},
    "outputs": [],
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "76b2ee1e-ca96-45c9-8e69-efea286e6557",
    "metadata": {},
    "outputs": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "437eaeb7-6766-4e14-b819-b9f2cee7a380",
    "metadata": {},
    "outputs": [],
@@ -818,9 +818,9 @@
     "#     axes[1].plot(panel_3[\"TIME_PERIOD\"], panel_3[\"percentage_n\"], label=\"Total Merchandise Trade\", marker='*', markersize = 5, linestyle = \"dashed\",  color = '#a65628')\n",
     "#     axes[1].set_title(\"Percentage share of Total Trade Over Time\", fontsize = 10)\n",
     "#     #axes0].set_xlabel(\"Year\", fontsize = 7)\n",
-    "    # axes[1].set_ylabel(\"percentage\", fontsize = 10)\n",
-    "    # axes[1].set_xticks([2000, 2002, 2004, 2006, 2008, 2010, 2012, 2014, 2016, 2018, 2020, 2022, 2023])\n",
-    "    # #axes[0].tick_params(axis='x', labelsize=7)\n",
+    "#     axes[1].set_ylabel(\"percentage\", fontsize = 10)\n",
+    "#     axes[1].set_xticks([2000, 2002, 2004, 2006, 2008, 2010, 2012, 2014, 2016, 2018, 2020, 2022, 2023])\n",
+    "#     #axes[0].tick_params(axis='x', labelsize=7)\n",
     "    # axes[1].tick_params(axis='y', labelsize=7)\n",
     "    # axes[1].legend([\"Unique cultural goods\", \"Reproducible cultural goods\", \"Non-cultural goods\"], fontsize=6)\n",
     "    # axes[1].grid(True)\n",
@@ -856,7 +856,7 @@
     "    # #axes[0].set_xlabel(\"Year\", fontsize = 7)\n",
     "    # axes[0].set_ylabel(\"value ($ million)\", fontsize = 8)\n",
     "    # axes[0].set_xticks([2000, 2002, 2004, 2006, 2008, 2010, 2012, 2014, 2016, 2018, 2020, 2022, 2023])\n",
-    "    #axes[0].tick_params(axis='x', labelsize=7)\n",
+    "    # #axes[0].tick_params(axis='x', labelsize=7)\n",
     "    # axes[0].tick_params(axis='y', labelsize=7)\n",
     "    # axes[0].legend([\"Unique cultural goods\", \"Reproducible cultural goods\", \"All goods\"], fontsize=6)\n",
     "    # axes[0].grid(True)\n",
@@ -865,10 +865,10 @@
     "    # axes[1].plot(panel_unique2[\"TIME_PERIOD\"][:upto], panel_unique2[\"Global_CC_Cl_repro\"][:upto], label=\"Reproducible Cultural Trade\", marker='*', markersize = 5, linestyle = \"dashed\", color = '#4daf4a')\n",
     "    # axes[1].plot(panel_unique2[\"TIME_PERIOD\"][:upto], panel_unique2[\"Global_CC_Cl_total\"][:upto], label=\"Total Merchandise Trade\", marker='*', markersize = 5, linestyle = \"dashed\", color = '#a65628')\n",
     "    # axes[1].set_title(\"Global Clustering Coefficients Over Time (Clemente Method)\", fontsize = 8.5)\n",
-    "    # #axes[1].set_xlabel(\"Year\", fontsize = 7)\n",
+    "    # # #axes[1].set_xlabel(\"Year\", fontsize = 7)\n",
     "    # axes[1].set_ylabel(\"value\", fontsize = 7)\n",
     "    # axes[1].set_xticklabels([2000, 2002, 2004, 2006, 2008, 2010, 2012, 2014, 2016, 2018, 2020, 2022, 2023])\n",
-    "    # #axes[1].tick_params(axis='x', labelsize=7)\n",
+    "    # # #axes[1].tick_params(axis='x', labelsize=7)\n",
     "    # axes[1].tick_params(axis='y', labelsize=7)\n",
     "    # axes[1].legend([\"Unique cultural goods\", \"Reproducible cultural goods\", \"All goods\"], fontsize = 6)\n",
     "    # axes[1].grid(True)\n",
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "94dc18ae-784c-4e73-b968-5f3196d84c99",
    "metadata": {},
    "outputs": [],
